Update with updated theme. Move files to theme

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ header_pages:
   - _pages/posts.html
 
 # Build settings
+# theme: blogtheme
 remote_theme: nathanjessen/blogtheme@main
 
 ####################
@@ -28,10 +29,6 @@ plugins:
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-sitemap
-
-# Build settings
-# theme: blogtheme
-# remote_theme: nathanjessen/blogtheme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -47,7 +44,6 @@ exclude:
   - package.json
   - package-lock.json
   - README.md
-  - src
   - tailwind.config.js
   - vendor
 
@@ -138,7 +134,7 @@ profile: false
 ####################
 
 author: Nathan Jessen
-logo: /assets/images/wasp.png
+logo: null
 
 # Google Analytics
 ga_domain: nathanjessen.github.io
@@ -149,10 +145,10 @@ ga_tracking_id: UA-42437510-1
 github_url:  https://github.com/nathanjessen
 # twitter_url: https://twitter.com/
 linkedin_url: https://www.linkedin.com/in/njessen/
-# codepen_url: https://codepen.io/njessen
 # medium_url: https://medium.com/@nathanjessen/about
 # instagram_url: https://www.instagram.com/nathanjessen
 # dribbble_url: https://dribbble.com/
+# codepen_url: https://codepen.io/njessen
 # angellist_url: https://angel.co/u/nathan-jessen
 
 # jekyll-seo-tag - social profiles
@@ -162,3 +158,7 @@ social:
     # - https://codepen.io/njessen
     # - https://medium.com/@nathanjessen/about
     - https://www.linkedin.com/in/njessen/
+
+# Customizable Content
+featured_title: Featured Projects
+featured_content: Take a look at some of the projects I've been working on.
