Update and cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -162,3 +162,4 @@ social:
 # Customizable Content
 featured_title: Featured Projects
 featured_content: Take a look at some of the projects I've been working on.
+attachment_list_title: Attachments
