--- a/_data/featured.yml
+++ b/_data/featured.yml
@@ -1,17 +1,17 @@
+- title: OpenSea Integration
+  img: assets/images/opensea.png
+  desc: ReactJS + Web3 integration for viewing and buying NFTs from OpenSea directly in OctoFi app.
+  source: https://github.com/OctoFi/octofi-app-aquafarm
+  url: https://app.octo.fi/
+
+- title: Jekyll Theme
+  img: assets/images/blogtheme.png
+  desc: Clean minimalist theme for Jekyll using TailwindCSS.
+  source: https://github.com/nathanjessen/blogtheme
+  url: https://nathanjessen.com/
+
 - title: Uniswap Tokenlist
   img: assets/images/tokenlist.png
   desc: An ERC20 token list validator and JSON file for displaying ethereum tokens in well-known UI's like Uniswap.
   source: https://github.com/nathanjessen/tokenlist
   url: https://nathanjessen.com/tokenlist/
-
-- title: OpenSea Integration
-  img: assets/images/opensea.png
-  desc: ReactJS integration for viewing and buying NFTs from OpenSea directly in OctoFi app.
-  source: https://github.com/nathanjessen/octofi-app-aquafarm/tree/octo-opensea
-  url: https://app.octo.fi/
-
-- title: Jekyll Theme
-  img: assets/images/blogtheme.png
-  desc: A blog theme for Jekyll built using Tailwindcss.
-  source: https://github.com/nathanjessen/blogtheme
-  url: https://nathanjessen.com/
