--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ header_pages:
   - _pages/index.html
   - _pages/projects.html
   - _pages/posts.html
-  - _pages/ideal-position.html
+  # - _pages/ideal-position.html
 
 # Build settings
 # theme: blogtheme
