--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "cross-spawn": "7.0.3",
     "cssnano": "^5.1.11",
+    "daisyui": "^2.19.0",
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "postcss-import": "^14.1.0",
